# oru

backend/: .hlint.yaml  backend.cabal
backend/app/: Main.hs
backend/comments/: 2000-03-14-Vincent--amp--Theo.md
backend/generate-elm/: Main.hs
backend/src/Oru/: Comment.hs  Main.hs
frontend/: .gitignore  elm-watch.json  elm.json  index.html  input.css  package-lock.json  package.json  tailwind.config.js
frontend/src/: Api.elm  Comment.elm  CommentId.elm  Icon.elm  Main.elm  Slug.elm
frontend/src/Api/: Data.elm  Endpoint.elm
