cabal-version: 3.0
name:          backend
version:       0.0.0

common common
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , base                  ^>=4.17.1.0
    , bytestring
    , containers
    , directory
    , filepath
    , frontmatter
    , http-client
    , http-client-tls
    , http-types
    , json-spec
    , json-spec-elm
    , lens
    , lens-aeson
    , mtl
    , postgresql-simple
    , servant
    , servant-server
    , text
    , transformers
    , unordered-containers
    , wai
    , wai-cors
    , warp

executable oru-server
  import:         common
  build-depends:  oru-library
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -Wall -Werror -threaded -O -with-rtsopts=-N

library oru-library
  import:          common
  ghc-options:     -Wall -Werror
  exposed-modules: Oru.Main
                 , Oru.Comment
  hs-source-dirs:  src

executable oru-generate-elm
  import:         common
  build-depends:  oru-library
                , elm-syntax
                , prettyprinter
  main-is:        Main.hs
  hs-source-dirs: generate-elm
  ghc-options:    -Wall -Werror -threaded -O -with-rtsopts=-N
